@@ -1851,10 +1851,9 @@ void RegisterTests_PerfTool(ImGuiTestEngine* e)
         // Take a screenshot.
         perf_report_image = "captures/capture_perf_report_0000.png";
         ImGuiCaptureArgs* args = ctx->CaptureArgs;
-        args->InFlags = ImGuiCaptureFlags_HideMouseCursor;
         args->InCaptureRect = plot_child->Rect();
         ctx->CaptureAddWindow(window->Name);
-        ctx->CaptureScreenshotEx();
+        ctx->CaptureScreenshot(ImGuiCaptureFlags_HideMouseCursor);
         ctx->ItemDragWithDelta("splitter", ImVec2(0, -180));        // Show info table
 #endif
         ImStrncpy(perftool->_FilterDateFrom, min_date_bkp, IM_ARRAYSIZE(min_date_bkp));
